# MyProjectClass

./: .gitignore  README.md  pyproject.toml
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6___init___py.html  z_145eef247bfb46b6_main_py.html
src/: base_product.py  main.py  models.py  print_mixin.py  utils.py
tests/: conftest.py  test_main.py  test_models.py  test_print_mixin.py
